--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ python-dotenv = "^0.19.1"
 lxml = "^4.6.3"
 textblob = "^0.15.3"
 langdetect = "^1.0.9"
+click = "^8.0.3"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.9.2"
