--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ lxml = "^4.6.3"
 textblob = "^0.15.3"
 langdetect = "^1.0.9"
 click = "^8.0.3"
+simplejson = "^3.17.5"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.9.2"
